# async_hybrid_fs

./: .gitignore  Cargo.toml  README.md
benches/: read.rs  read_criterion.rs  read_hotpath.rs
benches/scenarios/: read.rs
src/: borrowed_buf.rs  default.rs  flags.rs  fs.rs  helpers.rs  iobuf.rs  lib.rs  metadata.rs  runtime.rs
src/client/: command.rs  completion.rs  mod.rs  operations.rs  register.rs  requests.rs  ticketing.rs
src/client/pending_io/: chained.rs  fixed_value.rs  mod.rs
src/client/pending_io/fallback/: mod.rs
src/client/pending_io/uring/: close.rs  fadvise.rs  fallocate.rs  ftruncate.rs  link_at.rs  macros.rs  mkdir_at.rs  mod.rs  open_at.rs  read_into.rs  read_into_vectored.rs  rename_at.rs  statx.rs  statx_path.rs  symlink_at.rs  sync.rs  unlink_at.rs  write_from.rs  write_from_vectored.rs
src/tests/: channel_tests.rs  mod.rs  scoped_tests.rs
