[package]
name = "async_hybrid_fs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.89"
bitflags = "2.11.0"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
io-uring = "0.7.11"
lazy_static = "1.5.0"
libc = "0.2.183"
nix = { version = "0.31.2", features = ["fs", "uio", "user"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "rt", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["macros"] }
