[package]
name = "async_hybrid_fs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.89"
bitflags = "2.11.0"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
io-uring = "0.7.11"
lazy_static = "1.5.0"
libc = "0.2.183"
log = "0.4.29"
nix = { version = "0.31.2", features = ["fs", "uio", "user"] }
oneshot = { version = "0.2.1", features = ["std"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "rt", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
test-log = "0.2.19"
tokio = { version = "1.50.0", features = ["macros", "time"] }
tokio-util = "0.7.18"

[features]
pending-io-futures = []
