[package]
name = "async_hybrid_fs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.89"
bitflags = "2.11.0"
crossbeam-channel = { version = "0.5.15", features = ["std"] }
dashmap = "6.1.0"
io-uring = "0.7.11"
lazy_static = "1.5.0"
libc = "0.2.183"
log = "0.4.29"
nix = { version = "0.31.2", features = ["fs", "uio", "user"] }
oneshot = { version = "0.2.1", features = ["async", "std"] }
parking_lot = "0.12.5"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "rt", "sync"] }
hotpath = "0.15.0"

[dev-dependencies]
tempfile = "3.27.0"
test-log = "0.2.19"
tokio = { version = "1.50.0", features = ["io-util", "macros", "time"] }
tokio-util = "0.7.18"
criterion = { version = "0.8.2", features = ["async", "async_tokio", "html_reports", "stable"] }
futures = "0.3.32"
defer-drop = "1.3.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-tokio = ["hotpath/tokio"]
pending-io-futures = []

[[bench]]
name = "read_criterion"
harness = false


[profile.samply]
inherits = "release"
debug = true
